; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event.c_backtrace_address.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/extr_perf_event.c_backtrace_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_callchain_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i32)* @backtrace_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @backtrace_address(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.perf_callchain_entry*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.perf_callchain_entry*
  store %struct.perf_callchain_entry* %9, %struct.perf_callchain_entry** %7, align 8
  %10 = load %struct.perf_callchain_entry*, %struct.perf_callchain_entry** %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @perf_callchain_store(%struct.perf_callchain_entry* %10, i64 %11)
  ret void
}

declare dso_local i32 @perf_callchain_store(%struct.perf_callchain_entry*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
